# spatialite

./: .gitignore  .pkg  CMakeLists.txt
cmake/: pkg.cmake
geos-3.11.2/: CMakeLists.txt  release.md
libspatialite-5.0.1/: CMakeLists.txt  config.h  fakeconfig.h
libspatialite-5.0.1/src/gaiageo/: gg_shape.c
libspatialite-5.0.1/src/headers/spatialite/: gaiaconfig-msvc.h  gaiaconfig.h  gg_structs.h
proj-9.2.1/: CMakeLists.txt
proj-9.2.1/cmake/: CMakeLists.txt
proj-9.2.1/data/: CMakeLists.txt
proj-9.2.1/src/: lib_proj.cmake
proj-9.2.1/src/apps/: CMakeLists.txt
sqlite3/: CMakeLists.txt
