cmake_minimum_required(VERSION 3.10)
project(libspatialite LANGUAGES C)

file(GLOB_RECURSE spatialite-src-files src/*.c)

set(spatialite-src-files
  src/connection_cache/alloc_cache.c
  src/connection_cache/gg_sequence.c

  src/control_points/gaia_control_points.c
  src/control_points/grass_crs3d.c
  src/control_points/grass_georef.c
  src/control_points/grass_georef_tps.c

  src/cutter/gaia_cutter.c

  src/dxf/dxf_parser.c
  src/dxf/dxf_loader.c
  src/dxf/dxf_load_distinct.c
  src/dxf/dxf_load_mixed.c
  src/dxf/dxf_writer.c

  src/gaiaaux/gg_sqlaux.c
  src/gaiaaux/gg_utf8.c

  src/gaiaexif/gaia_exif.c

  src/gaiageo/gg_advanced.c
  src/gaiageo/gg_endian.c
  src/gaiageo/gg_geodesic.c
  src/gaiageo/gg_geometries.c
  src/gaiageo/gg_geoscvt.c
  src/gaiageo/gg_relations.c
  src/gaiageo/gg_relations_ext.c
  src/gaiageo/gg_rttopo.c
  src/gaiageo/gg_extras.c
  src/gaiageo/gg_shape.c
  src/gaiageo/gg_transform.c
  src/gaiageo/gg_wkb.c
  src/gaiageo/gg_wkt.c
  src/gaiageo/gg_vanuatu.c
  src/gaiageo/gg_ewkt.c
  src/gaiageo/gg_geoJSON.c
  src/gaiageo/gg_kml.c
  src/gaiageo/gg_gml.c
  src/gaiageo/gg_voronoj.c
  src/gaiageo/gg_xml.c
  src/gaiageo/gg_matrix.c

  src/geopackage/gpkg_add_tile_triggers.c
  src/geopackage/gpkg_get_normal_row.c
  src/geopackage/gpkg_get_normal_zoom.c
  src/geopackage/gpkgGetImageType.c
  src/geopackage/gpkgCreateBaseTables.c
  src/geopackage/gpkgInsertEpsgSRID.c
  src/geopackage/gpkgCreateTilesTable.c
  src/geopackage/gpkgCreateTilesZoomLevel.c
  src/geopackage/gpkgAddGeometryColumn.c
  src/geopackage/gpkgMakePoint.c
  src/geopackage/gpkgBinary.c
  src/geopackage/gpkg_add_geometry_triggers.c
  src/geopackage/gpkg_add_spatial_index.c
  src/geopackage/gaia_cvt_gpkg.c

  src/versioninfo/version.c

  src/md5/md5.c
  src/md5/gaia_md5.c

  src/spatialite/mbrcache.c
  src/spatialite/spatialite.c
  src/spatialite/spatialite_init.c
  src/spatialite/pause.c
  src/spatialite/metatables.c
  src/spatialite/statistics.c
  src/spatialite/extra_tables.c
  src/spatialite/se_helpers.c
  src/spatialite/srid_aux.c
  src/spatialite/table_cloner.c
  src/spatialite/dbobj_scopes.c
  src/spatialite/virtualdbf.c
  src/spatialite/virtualXL.c
  src/spatialite/virtualfdo.c
  src/spatialite/virtualgpkg.c
  src/spatialite/virtualbbox.c
  src/spatialite/virtualspatialindex.c
  src/spatialite/virtualnetwork.c
  src/spatialite/virtualrouting.c
  src/spatialite/virtualshape.c
  src/spatialite/virtualxpath.c
  src/spatialite/virtualelementary.c
  src/spatialite/virtualknn.c
  src/spatialite/create_routing.c
  src/spatialite/virtualgeojson.c

  src/srsinit/srs_init.c
  src/srsinit/epsg_inlined_00.c
  src/srsinit/epsg_inlined_01.c
  src/srsinit/epsg_inlined_02.c
  src/srsinit/epsg_inlined_03.c
  src/srsinit/epsg_inlined_04.c
  src/srsinit/epsg_inlined_05.c
  src/srsinit/epsg_inlined_06.c
  src/srsinit/epsg_inlined_07.c
  src/srsinit/epsg_inlined_08.c
  src/srsinit/epsg_inlined_09.c
  src/srsinit/epsg_inlined_10.c
  src/srsinit/epsg_inlined_11.c
  src/srsinit/epsg_inlined_12.c
  src/srsinit/epsg_inlined_13.c
  src/srsinit/epsg_inlined_14.c
  src/srsinit/epsg_inlined_15.c
  src/srsinit/epsg_inlined_16.c
  src/srsinit/epsg_inlined_17.c
  src/srsinit/epsg_inlined_18.c
  src/srsinit/epsg_inlined_19.c
  src/srsinit/epsg_inlined_20.c
  src/srsinit/epsg_inlined_21.c
  src/srsinit/epsg_inlined_22.c
  src/srsinit/epsg_inlined_23.c
  src/srsinit/epsg_inlined_24.c
  src/srsinit/epsg_inlined_25.c
  src/srsinit/epsg_inlined_26.c
  src/srsinit/epsg_inlined_27.c
  src/srsinit/epsg_inlined_28.c
  src/srsinit/epsg_inlined_29.c
  src/srsinit/epsg_inlined_30.c
  src/srsinit/epsg_inlined_31.c
  src/srsinit/epsg_inlined_32.c
  src/srsinit/epsg_inlined_33.c
  src/srsinit/epsg_inlined_34.c
  src/srsinit/epsg_inlined_35.c
  src/srsinit/epsg_inlined_36.c
  src/srsinit/epsg_inlined_37.c
  src/srsinit/epsg_inlined_38.c
  src/srsinit/epsg_inlined_39.c
  src/srsinit/epsg_inlined_40.c
  src/srsinit/epsg_inlined_41.c
  src/srsinit/epsg_inlined_42.c
  src/srsinit/epsg_inlined_43.c
  src/srsinit/epsg_inlined_44.c
  src/srsinit/epsg_inlined_45.c
  src/srsinit/epsg_inlined_46.c
  src/srsinit/epsg_inlined_47.c
  src/srsinit/epsg_inlined_48.c
  src/srsinit/epsg_inlined_49.c
  src/srsinit/epsg_inlined_50.c
  src/srsinit/epsg_inlined_51.c
  src/srsinit/epsg_inlined_52.c
  src/srsinit/epsg_inlined_53.c
  src/srsinit/epsg_inlined_54.c
  src/srsinit/epsg_inlined_55.c
  src/srsinit/epsg_inlined_56.c
  src/srsinit/epsg_inlined_57.c
  src/srsinit/epsg_inlined_58.c
  src/srsinit/epsg_inlined_59.c
  src/srsinit/epsg_inlined_wgs84_00.c
  src/srsinit/epsg_inlined_wgs84_01.c
  src/srsinit/epsg_inlined_prussian.c
  src/srsinit/epsg_inlined_extra.c

  src/stored_procedures/stored_procedures.c

  src/topology/gaia_topology.c
  src/topology/gaia_auxtopo.c
  src/topology/gaia_auxtopo_table.c
  src/topology/gaia_topostmts.c
  src/topology/topo_callbacks.c
  src/topology/lwn_network.c
  src/topology/gaia_network.c
  src/topology/gaia_auxnet.c
  src/topology/gaia_netstmts.c
  src/topology/net_callbacks.c

  src/virtualtext/virtualtext.c

  src/wfs/wfs_in.c
)
add_library(spatialite ${spatialite-src-files})
target_link_libraries(spatialite LibXml2)
target_compile_definitions(spatialite PRIVATE HAVE_CONFIG_H PROJ_NEW)
target_include_directories(spatialite SYSTEM PUBLIC . src src/headers)